# xrdcl-pelican

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/xrootd6/: Dockerfile  devcontainer.json
.github/workflows/: RPM.yml  test.yml
cmake/: FindSciTokensCpp.cmake  FindXrootd.cmake
cmake/nlohmann_json/: CMakeLists.txt
cmake/tinyxml2/: CMakeLists.txt
configs/: curl-plugin.conf  export-lib-symbols  pelican-plugin-http.conf  pelican-plugin.conf
rpm/: xrdcl-pelican.spec
src/: ChecksumCache.cc  ChecksumCache.hh  CurlChecksum.cc  CurlChecksum.hh  CurlFactory.cc  CurlFile.cc  CurlFilesystem.cc  CurlFilesystem.hh  CurlListdir.cc  CurlOps.cc  CurlOps.hh  CurlOptions.cc  CurlRead.cc  CurlReadV.cc  CurlResponses.hh  CurlUtil.cc  CurlUtil.hh  CurlWorker.hh  DirectorCache.cc  DirectorCache.hh  DirectorCacheResponseHandler.cc  FedInfo.cc  FedInfo.hh  OptionsCache.cc  OptionsCache.hh  ParseTimeout.cc  ParseTimeout.hh  PelicanFactory.cc  PelicanFactory.hh  PelicanFile.cc  PelicanFile.hh  PelicanFilesystem.cc  PelicanFilesystem.hh  PelicanHeaders.cc  PelicanHeaders.hh  XrdClCurlUtil.cc  XrdClCurlUtil.hh  XrdClPelicanFactory.cc
src/XrdClCurl/: CurlChecksum.cc  CurlCopy.cc  CurlDelete.cc  CurlFactory.cc  CurlFactory.hh  CurlFile.cc  CurlFile.hh  CurlFilesystem.cc  CurlFilesystem.hh  CurlListdir.cc  CurlMkcol.cc  CurlOpen.cc  CurlOps.cc  CurlOps.hh  CurlOptions.cc  CurlPut.cc  CurlQuery.cc  CurlRead.cc  CurlReadV.cc  CurlStat.cc  CurlUtil.cc  CurlUtil.hh  CurlWorker.hh  OptionsCache.cc  OptionsCache.hh  XrdClCurlChecksum.hh  XrdClCurlConnectionCallout.hh  XrdClCurlFactory.cc  XrdClCurlFactory.hh  XrdClCurlFile.cc  XrdClCurlFile.hh  XrdClCurlFilesystem.cc  XrdClCurlFilesystem.hh  XrdClCurlHeaderCallout.hh  XrdClCurlOpChecksum.cc  XrdClCurlOpCopy.cc  XrdClCurlOpDelete.cc  XrdClCurlOpListdir.cc  XrdClCurlOpMkcol.cc  XrdClCurlOpOpen.cc  (+17 more)
src/XrdClPelican/: BrokerCache.cc  BrokerCache.hh  ChecksumCache.cc  ChecksumCache.hh  ConnectionBroker.cc  ConnectionBroker.hh  DirectorCache.cc  DirectorCache.hh  DirectorCacheResponseHandler.cc  DirectorCacheResponseHandler.hh  FedInfo.cc  FedInfo.hh  PelicanFactory.cc  PelicanFactory.hh  PelicanFile.cc  PelicanFile.hh  PelicanFilesystem.cc  PelicanFilesystem.hh  PelicanHeaders.cc  PelicanHeaders.hh  README.md  RetryThread.cc  RetryThread.hh  WritebackDB.cc  WritebackDB.hh
src/XrdClS3/: README.md  S3DownloadHandler.cc  S3DownloadHandler.hh  S3Factory.cc  S3Factory.hh  S3File.cc  S3File.hh  S3Filesystem.cc  S3Filesystem.hh  XrdClS3DownloadHandler.cc  XrdClS3DownloadHandler.hh  XrdClS3Factory.cc  XrdClS3Factory.hh  XrdClS3File.cc  XrdClS3File.hh  XrdClS3Filesystem.cc  XrdClS3Filesystem.hh
src/common/: CurlChecksum.hh  CurlResponses.hh  ParseTimeout.cc  XrdClCurlChecksum.hh  XrdClCurlConnectionCallout.hh  XrdClCurlHeaderCallout.hh  XrdClCurlParseTimeout.cc  XrdClCurlParseTimeout.hh  XrdClCurlResponseInfo.hh  XrdClCurlResponses.hh
tests/: CMakeLists.txt  ChecksumCache.cc  ChecksumTest.cc  CopyTest.cc  CurlWorker.cc  DirectorCacheTest.cc  HeaderParser.cc  ParseTimeoutTest.cc  TransferTest.cc  TransferTest.hh  VectorReadTest.cc  WriteTest.cc  pelican-setup.sh  pelican-stress-test.sh  pelican-teardown.sh  pelican-test.sh  pelican-wrk-test.sh
tests/XrdClCurl/: CMakeLists.txt  ChecksumTest.cc  CloseDuringPrefetchTest.cc  ConnectionCalloutTest.cc  CopyTest.cc  DeleteTest.cc  ErrnoConvertTest.cc  ErrorMessageTest.cc  HeaderParser.cc  MkcolTest.cc  ParseTimeoutTest.cc  ReadTest.cc  RedirectTest.cc  VectorReadTest.cc  WriteTest.cc  curl-setup.sh  curl-test.sh  leaksanitizer-suppress.txt
tests/XrdClCurlCommon/: TransferTest.cc  TransferTest.hh  XrdOssSlowOpen.cc
tests/XrdClPelican/: CMakeLists.txt  CacheOverrideTest.cc  CacheToken.cc  ChecksumCache.cc  ChecksumTest.cc  DirectorCacheTest.cc  DirectorTest.cc  EndpointOverrideTest.cc  HeaderParser.cc  RedirectIntegrationTest.cc  RetryIntegrationTest.cc  RetryTest.cc  TokenDiscoveryTest.cc  WritebackTest.cc  leaksanitizer-suppress.txt  pelican-setup.sh  pelican-teardown.sh  pelican-test.sh  xrdoss_slowopen.cc
tests/XrdClS3/: CMakeLists.txt  DeleteTest.cc  DirListTest.cc  ReadTest.cc  UrlParseTest.cc  s3-setup.sh  s3-teardown.sh
tests/common/: CMakeLists.txt  TransferTest.cc  TransferTest.hh
